# lenet-5-cpp

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  demo.cc  demo.cpp  inference.cpp  lenet5.h  report.ipynb  timer.h  train.cpp
cnn/: BUILD.bazel  VariadicTable.h  layer.h  loss.h  mnist.cpp  mnist.h  network.cpp  network.h  optimizer.h  timer.h  utils.h
cnn/layer/: BUILD.bazel  ave_pooling.cpp  ave_pooling.h  conv.cpp  conv.h  cuda_conv.cu  cuda_conv.h  cuda_conv_utils.cu  cuda_conv_utils.h  fully_connected.cpp  fully_connected.h  max_pooling.cpp  max_pooling.h  relu.cpp  relu.h  sigmoid.cpp  sigmoid.h  softmax.cpp  softmax.h
cnn/loss/: BUILD.bazel  cross_entropy_loss.cpp  cross_entropy_loss.h  mse_loss.cpp  mse_loss.h
cnn/optimizer/: BUILD.bazel  sgd.cpp  sgd.h
include/: lenet5.h
src/: BUILD.bazel  loss.h
src/layer/: BUILD.bazel  ave_pooling.h  conv.h  fully_connected.h  max_pooling.h  relu.h  sigmoid.h  softmax.h
src/loss/: BUILD.bazel  cross_entropy_loss.h  mse_loss.h
src/optimizer/: BUILD.bazel  sgd.h
test/: BUILD.bazel  test_cuda_conv.cpp
tools/: fix_style.sh
