load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "conv_ver",
    build_setting_default = "v3",
)

config_setting(
    name = "conv_v3",
    visibility = ["//visibility:public"],
    flag_values = {
        ":conv_ver": "v3",
    },
)

config_setting(
    name = "conv_v2",
    visibility = ["//visibility:public"],
    flag_values = {
        ":conv_ver": "v2",
    },
)

config_setting(
  name = "conv_v1",
  visibility = ["//visibility:public"],
  flag_values = {
    ":conv_ver": "v1",
  },
)

# ================= MAIN GOES HERE =========================

cc_library(
  name = "header",
  hdrs = glob(["include/*.h"]),
  deps = [
    "//cnn:cnn",
  ]
)

cc_binary(
  name = "demo",
  srcs = ["demo.cpp"],
  deps = [
    "//cnn:cnn",
    ":header",
  ]
)

filegroup(
  name = "fashion_mnist_data",
  srcs = glob(["data/**"]),
)

filegroup(
  name = "lenet5_weight",
  srcs = glob(["weights/**"]),
)

cc_binary(
  name = "train",
  srcs = ["train.cpp"],
  data = [":fashion_mnist_data"],
  deps = [
    "//cnn:cnn",
    ":header",
  ]
)

cc_binary(
  name = "evaluate",
  srcs = ["evaluate.cpp"],
  data = [":fashion_mnist_data", ":lenet5_weight"],
  deps = [
    "//cnn:cnn",
    ":header",
  ]
)


#genrule(
  #name = "test_save",
  #outs = ["lenet5_weight"],
  #cmd = "$(location :demo) > $@",
  #executable = True,
  #tools = [":demo"],
#)
