cc_library(
  name = "cnn_basic",
  hdrs = glob(["*.h"]),
  srcs = glob(["*.cc"]),
  deps = [
    "@eigen",
  ],
  visibility = ["//visibility:public"],
)

cc_library(
  name = "cnn",
  deps = [
    ":cnn_basic",
    "//src/layer:cnn_layer",
    "//src/loss:cnn_loss",
    "//src/optimizer:cnn_optimizer",
  ],
  visibility = ["//visibility:public"],
)
