load("@rules_cuda//cuda:defs.bzl", "cuda_library")

cuda_library(
  name = "cuda_conv",
  hdrs = ["cuda_conv.h"],
  srcs = ["cuda_conv.cu"],
  deps = [
    "//cnn:cnn_basic",
    "@eigen",
  ],
  defines = select({
    "//:conv_v3" : ["CONV3"],
    "//:conv_v2" : ["CONV2"],
    "//:conv_v1" : ["CONV1"],
  }),
)

cc_library(
  name = "cnn_layer",
  hdrs = glob(["*.h"], exclude = ["cuda_conv.h"]),
  srcs = glob(["*.cpp"]),
  deps = [
    ":cuda_conv",
    "@eigen",
    "//cnn:cnn_basic",
  ],
  defines = select({
    "//:conv_v3" : ["CONV3"],
    "//:conv_v2" : ["CONV2"],
    "//:conv_v1" : ["CONV1"],
  }),
  visibility = ["//visibility:public"],
)

